# qtmcp

./: .gitignore  CMakeLists.txt  README.md  mcp-version-annotations-support-plan-final.md  update-plan-mcp-2025-03-26.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
examples/: CMakeLists.txt
examples/mcpclient/: CMakeLists.txt
examples/mcpclient/inspector/: CMakeLists.txt  abstractwidget.cpp  abstractwidget.h  calltoolwidget.cpp  calltoolwidget.h  calltoolwidget.ui  connectwidget.cpp  connectwidget.h  connectwidget.ui  getpromptwidget.cpp  getpromptwidget.h  getpromptwidget.ui  initializewidget.cpp  initializewidget.h  initializewidget.ui  listpromptswidget.cpp  listpromptswidget.h  listpromptswidget.ui  listresourceswidget.cpp  listresourceswidget.h  listresourceswidget.ui  listresourcetemplateswidget.cpp  listresourcetemplateswidget.h  listresourcetemplateswidget.ui  listtoolswidget.cpp  listtoolswidget.h  listtoolswidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pingwidget.cpp  pingwidget.h  pingwidget.ui  readresourcewidget.cpp  readresourcewidget.h  readresourcewidget.ui  resourcetemplatewidget.cpp  resourcetemplatewidget.h  resourcetemplatewidget.ui  (+6 more)
examples/mcpserver/: CMakeLists.txt
examples/mcpserver/echo/: CMakeLists.txt  main.cpp  mcpserver.cpp  mcpserver.h
src/: CMakeLists.txt
src/mcpclient/: CMakeLists.txt  qmcpclient.cpp  qmcpclient.h  qmcpclientbackendinterface.cpp  qmcpclientbackendinterface.h  qmcpclientbackendplugin.h  (+1 more)
tests/: CMakeLists.txt
tests/auto/mcpcommon/: CMakeLists.txt  testhelper.h
tests/auto/mcpcommon/qmcpannotated/: CMakeLists.txt  tst_qmcpannotated.cpp
tests/auto/mcpcommon/qmcpannotations/: CMakeLists.txt  tst_qmcpannotations.cpp
tests/auto/mcpcommon/qmcpanyof/: CMakeLists.txt  tst_qmcpanyof.cpp
tests/auto/mcpcommon/qmcpaudiocontent/: CMakeLists.txt  tst_qmcpaudiocontent.cpp
tests/auto/mcpcommon/qmcpblobresourcecontents/: CMakeLists.txt  tst_qmcpblobresourcecontents.cpp
tests/auto/mcpcommon/qmcpcalltoolrequest/: CMakeLists.txt  tst_qmcpcalltoolrequest.cpp
tests/auto/mcpcommon/qmcpcalltoolresultcontent/: CMakeLists.txt  tst_qmcpcalltoolresultcontent.cpp
tests/auto/mcpcommon/qmcpcancellednotification/: CMakeLists.txt  tst_qmcpcancellednotification.cpp
tests/auto/mcpcommon/qmcpclientcapabilities/: CMakeLists.txt  tst_qmcpclientcapabilities.cpp
tests/auto/mcpcommon/qmcpclientcapabilitiesexperimental/: CMakeLists.txt  tst_qmcpclientcapabilitiesexperimental.cpp
tests/auto/mcpcommon/qmcpclientcapabilitiesroots/: CMakeLists.txt  tst_qmcpclientcapabilitiesroots.cpp
tests/auto/mcpcommon/qmcpclientcapabilitiessampling/: CMakeLists.txt  tst_qmcpclientcapabilitiessampling.cpp
tests/auto/mcpcommon/qmcpclientnotification/: CMakeLists.txt  tst_qmcpclientnotification.cpp
tests/auto/mcpcommon/qmcpcompleterequest/: CMakeLists.txt  tst_qmcpcompleterequest.cpp
tests/auto/mcpcommon/qmcpcreatemessageresultcontent/: CMakeLists.txt  tst_qmcpcreatemessageresultcontent.cpp
tests/auto/mcpcommon/qmcpimplementation/: CMakeLists.txt  tst_qmcpimplementation.cpp
tests/auto/mcpcommon/qmcpinitializerequest/: CMakeLists.txt  tst_qmcpinitializerequest.cpp
tests/auto/mcpcommon/qmcpinitializeresult/: CMakeLists.txt  tst_qmcpinitializeresult.cpp
tests/auto/mcpcommon/qmcpjsonrpcbatchrequest/: CMakeLists.txt  tst_qmcpjsonrpcbatchrequest.cpp
tests/auto/mcpcommon/qmcpjsonrpcbatchresponse/: CMakeLists.txt  tst_qmcpjsonrpcbatchresponse.cpp
tests/auto/mcpcommon/qmcpjsonrpcmessage/: CMakeLists.txt  tst_qmcpjsonrpcmessage.cpp
tests/auto/mcpcommon/qmcpjsonrpcnotification/: CMakeLists.txt  tst_qmcpjsonrpcnotification.cpp
tests/auto/mcpcommon/qmcpjsonrpcnotificationparams/: CMakeLists.txt  tst_qmcpjsonrpcnotificationparams.cpp
tests/auto/mcpcommon/qmcpjsonrpcnotificationparamsmeta/: CMakeLists.txt  tst_qmcpjsonrpcnotificationparamsmeta.cpp
tests/auto/mcpcommon/qmcplistpromptsrequest/: CMakeLists.txt  tst_qmcplistpromptsrequest.cpp
tests/auto/mcpcommon/qmcplisttoolsresult/: CMakeLists.txt  tst_qmcplisttoolsresult.cpp
tests/auto/mcpcommon/qmcploggingmessagenotification/: CMakeLists.txt  tst_qmcploggingmessagenotification.cpp
tests/auto/mcpcommon/qmcpnotification/: CMakeLists.txt  tst_qmcpnotification.cpp
tests/auto/mcpcommon/qmcpnotificationparams/: CMakeLists.txt  tst_qmcpnotificationparams.cpp
tests/auto/mcpcommon/qmcpnotificationparamsmeta/: CMakeLists.txt  tst_qmcpnotificationparamsmeta.cpp
tests/auto/mcpcommon/qmcppromptmessage/: CMakeLists.txt  tst_qmcppromptmessage.cpp
tests/auto/mcpcommon/qmcppromptmessagecontent/: CMakeLists.txt  tst_qmcppromptmessagecontent.cpp
tests/auto/mcpcommon/qmcpresource/: CMakeLists.txt  tst_qmcpresource.cpp
tests/auto/mcpcommon/qmcproot/: CMakeLists.txt  tst_qmcproot.cpp
tests/auto/mcpcommon/qmcpsamplingmessagecontent/: CMakeLists.txt  tst_qmcpsamplingmessagecontent.cpp
tests/auto/mcpcommon/qmcpservercapabilities/: CMakeLists.txt  tst_qmcpservercapabilities.cpp
tests/auto/mcpcommon/qmcpservercapabilitiesexperimental/: CMakeLists.txt  tst_qmcpservercapabilitiesexperimental.cpp
tests/auto/mcpcommon/qmcpservercapabilitieslogging/: CMakeLists.txt  tst_qmcpservercapabilitieslogging.cpp
tests/auto/mcpcommon/qmcpservercapabilitiesprompts/: CMakeLists.txt  tst_qmcpservercapabilitiesprompts.cpp
tests/auto/mcpcommon/qmcpservercapabilitiesresources/: CMakeLists.txt  tst_qmcpservercapabilitiesresources.cpp
tests/auto/mcpcommon/qmcpservercapabilitiestools/: CMakeLists.txt  tst_qmcpservercapabilitiestools.cpp
tests/auto/mcpcommon/qmcpservernotification/: CMakeLists.txt  tst_qmcpservernotification.cpp
tests/auto/mcpcommon/qmcpsetlevelrequestparams/: CMakeLists.txt  tst_qmcpsetlevelrequestparams.cpp
tests/auto/mcpcommon/qmcptextcontent/: CMakeLists.txt  tst_qmcptextcontent.cpp
tests/auto/mcpcommon/qmcptool/: CMakeLists.txt  tst_qmcptool.cpp
tests/auto/mcpcommon/qmcptoolinputschema/: CMakeLists.txt  tst_qmcptoolinputschema.cpp
tests/auto/mcpserver/qmcpserver/: CMakeLists.txt  tst_qmcpserver.cpp
(+206 files in other folders)
