# Copyright (C) 2025 Signal Slot Inc.
# SPDX-License-Identifier: LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only

add_subdirectory(qmcpannotated)
add_subdirectory(qmcpannotations)
add_subdirectory(qmcpanyof)
add_subdirectory(qmcpaudiocontent)
add_subdirectory(qmcpblobresourcecontents)
add_subdirectory(qmcpcalltoolrequest)
add_subdirectory(qmcpcalltoolresultcontent)
add_subdirectory(qmcpcancellednotification)
add_subdirectory(qmcpclientcapabilities)
add_subdirectory(qmcpclientcapabilitiesexperimental)
add_subdirectory(qmcpclientcapabilitiesroots)
add_subdirectory(qmcpclientcapabilitiessampling)
add_subdirectory(qmcpclientnotification)
add_subdirectory(qmcpcompleterequest)
add_subdirectory(qmcpcreatemessageresultcontent)
add_subdirectory(qmcpimplementation)
add_subdirectory(qmcpinitializerequest)
add_subdirectory(qmcpinitializeresult)
add_subdirectory(qmcpjsonrpcnotification)
add_subdirectory(qmcpjsonrpcnotificationparams)
add_subdirectory(qmcpjsonrpcnotificationparamsmeta)
add_subdirectory(qmcpjsonrpcbatchrequest)
add_subdirectory(qmcpjsonrpcbatchresponse)
add_subdirectory(qmcpjsonrpcmessage)
add_subdirectory(qmcplistpromptsrequest)
add_subdirectory(qmcplisttoolsresult)
add_subdirectory(qmcploggingmessagenotification)
add_subdirectory(qmcpnotification)
add_subdirectory(qmcpnotificationparams)
add_subdirectory(qmcpnotificationparamsmeta)
add_subdirectory(qmcppromptmessage)
add_subdirectory(qmcppromptmessagecontent)
add_subdirectory(qmcpresource)
add_subdirectory(qmcproot)
add_subdirectory(qmcpservercapabilities)
add_subdirectory(qmcpservercapabilitiesexperimental)
add_subdirectory(qmcpservercapabilitieslogging)
add_subdirectory(qmcpservercapabilitiesprompts)
add_subdirectory(qmcpservercapabilitiesresources)
add_subdirectory(qmcpservercapabilitiestools)
add_subdirectory(qmcpservernotification)
add_subdirectory(qmcpsamplingmessagecontent)
add_subdirectory(qmcpsetlevelrequestparams)
add_subdirectory(qmcptextcontent)
add_subdirectory(qmcptool)
add_subdirectory(qmcptoolinputschema)
